# mcpguard

./: .gitignore  Architecture.md  README.md  config.yaml.example  pyproject.toml
examples/claude-desktop/: config.json
mcpshield/: __main__.py
mcpshield/detectors/: pii.py  secrets.py
mcpshield/policy/: engine.py
mcpshield/proxy/: forwarder.py  models.py  pipeline.py  server.py  stdio_bridge.py
mcpshield/session/: taint.py
tests/: test_pii.py  test_proxy.py  test_secrets_redact.py  test_taint.py
