[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpshield"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
]

[project.scripts]
mcpshield = "mcpshield.proxy.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcpshield"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]